tests/ui/span/E0537.rs
<<<PULL-UPSTREAM>>> file deleted upstream; move the Ferrocene annotations if any, and delete this file
#[cfg(unknown())] //~ ERROR E0537
pub fn something() {}

pub fn main() {}

// ferrocene-annotations: fls_fymvsy6ig99a
// Attribute cfg
